--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-scripts": "^4.0.3"
@@ -18,5 +19,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.2"
+  }
 }
